feat: Enhance appointment and doctor retrieval; add doctor and patient details to appointment queries, update appointment response structure, and introduce new doctor endpoint